福島Project/src/objects/JFK_ShikyuTeishiWork__c.object
<CustomObject>
    <description>支給停止日設定処理にて使用する。
支給条件が変更される可能性のある日付情報を管理</description>
    <fields>
        <fullName>BosyuM_JyoseiTanka__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>0.募集M助成単価</label>
        <referenceTo>JFK_Bosyu__c</referenceTo>
        <relationshipLabel>支給停止ワーク</relationshipLabel>
        <relationshipName>BosyuM_JyoseiTanka</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeDate__c</fullName>
        <description>離職日、雇用形態変更日、補充労働者雇用日のいずれか</description>
        <label>状態変更日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>支給停止ワーク</relationshipLabel>
        <relationshipName>Rodosya</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>採番テスト</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>HoseiShikyuKingaku_1stYear__c</fullName>
        <description>支給金額の1000円未満切捨て分の1年目補正金額</description>
        <label>1.5_1年目補正額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HoseiShikyuKingaku_2ndYear__c</fullName>
        <description>支給金額の1000円未満切捨て分の2年目補正金額</description>
        <label>2.5_2年目補正額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HoseiShikyuKingaku_3rdYear__c</fullName>
        <description>支給金額の1000円未満切捨て分の3年目補正金額</description>
        <label>3.5_3年目補正額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JigyosyoTR_ShikyuJiki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>事業所TR（支給時期）</label>
        <referenceTo>JFK_JigyosyoTR__c</referenceTo>
        <relationshipLabel>支給停止ワーク</relationshipLabel>
        <relationshipName>JigyosyoTR_ShikyuJikis_Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JitsuShikyugaku_1stYear__c</fullName>
        <description>補正を含めた1年目に支給する金額</description>
        <formula>HoseiShikyuKingaku_1stYear__c  +  ShikyuKingaku_1stYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1.6_1年目実支給額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JitsuShikyugaku_2ndYear__c</fullName>
        <description>補正を含めた2年目に支給する金額</description>
        <formula>HoseiShikyuKingaku_2ndYear__c  +  ShikyuKingaku_2ndYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2.6_2年目実支給額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JitsuShikyugaku_3rdYear__c</fullName>
        <description>補正を含めた3年目に支給する金額</description>
        <formula>HoseiShikyuKingaku_3rdYear__c  +  ShikyuKingaku_3rdYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3.6_3年目実支給額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jyogai_1stYear__c</fullName>
        <formula>IF (  KeikaNissu__c &gt;  Nissu_1stYear__c 
, Nissu_1stYear__c 
, KeikaNissu__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.1_1年目除外日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jyogai_2ndYear__c</fullName>
        <formula>IF ( KeikaNissu__c - Jyogai_1stYear__c &gt; 0
, IF ( KeikaNissu__c - Jyogai_1stYear__c &gt; Nissu_2ndYear__c 
  , Nissu_2ndYear__c 
  , KeikaNissu__c - Jyogai_1stYear__c
  )
, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.2_2年目除外日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jyogai_3rdYear__c</fullName>
        <formula>IF ( KeikaNissu__c - Jyogai_1stYear__c - Jyogai_2ndYear__c &gt; 0 
, IF ( KeikaNissu__c - Jyogai_1stYear__c - Jyogai_2ndYear__c &gt; Nissu_3rdYear__c  
, Nissu_3rdYear__c  
, KeikaNissu__c - Jyogai_1stYear__c - Jyogai_2ndYear__c 
) 
, 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.3_3年目除外日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JyoseiTanka_1stYear__c</fullName>
        <formula>BosyuM_JyoseiTanka__r.JyoseiTanka_1stYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0.1年目単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JyoseiTanka_2nsYear__c</fullName>
        <formula>BosyuM_JyoseiTanka__r.JyoseiTanka_2nsYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0.2年目単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KeikaNissu__c</fullName>
        <formula>ShikyuYoteiHanteiBi__c  -  ShikyuKikanKaishiBi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.0_経過日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KikanNissu__c</fullName>
        <formula>IF ( ShikyuKikanSyuryoBi__c &lt; Tanka_KijunBi__c, 0,  ShikyuKikanSyuryoBi__c - Tanka_KijunBi__c  +  1 - IF(  Urudoshi_wo_Fukumu__c ,1,0) -  TeishiNissu__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0.支給対象日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nissu_1stYear__c</fullName>
        <description>当支給時期において1年目として支給対象となる日数</description>
        <label>1.2_1年目日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nissu_2ndYear__c</fullName>
        <description>当支給時期において2年目として支給対象となる日数</description>
        <label>2.2_2年目日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nissu_3rdYear__c</fullName>
        <description>当支給時期において3年目として支給対象となる日数</description>
        <label>3.2_3年目日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RodosyaNO__c</fullName>
        <label>労働者番号</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RodosyaNoFormula__c</fullName>
        <formula>Contact__r.RodosyaNO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>労働者番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RodosyaTR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>0.労働者TR</label>
        <referenceTo>JFK_RodoSyaTR__c</referenceTo>
        <relationshipLabel>支給停止ワーク (0.労働者TR)</relationshipLabel>
        <relationshipName>RodosyaTRtUxP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShikyuKikanKaishiBi__c</fullName>
        <label>0.支給期間開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShikyuKikanSyuryoBi__c</fullName>
        <label>0.支給期間終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShikyuKingakuRuikei_1stYear__c</fullName>
        <description>当支給時期において1年目として支給された金額の累計(端数を含まない)</description>
        <label>1.4_1年目支給額累計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuKingakuRuikei_2ndYear__c</fullName>
        <description>当支給時期において2年目として支給された金額の累計(端数を含まない)</description>
        <label>2.4_2年目支給額累計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuKingakuRuikei_3rdYear__c</fullName>
        <description>当支給時期において3年目として支給された金額の累計(端数を含まない)</description>
        <label>3.4_3年目支給額累計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuKingaku_1stYear__c</fullName>
        <description>当支給時期において1年目として支給対象となる金額</description>
        <label>1.3_1年目支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuKingaku_2ndYear__c</fullName>
        <description>当支給時期において2年目として支給対象となる金額</description>
        <label>2.3_2年目支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuKingaku_3rdYear__c</fullName>
        <description>当支給時期において3年目として支給対象となる金額</description>
        <label>3.3_3年目支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuKingaku__c</fullName>
        <formula>JitsuShikyugaku_1stYear__c  +  JitsuShikyugaku_2ndYear__c  +  JitsuShikyugaku_3rdYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0.当期支給金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuYoteiHanteiBi__c</fullName>
        <label>4.0_支給予定判定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShikyuYoteiKingaku_1stYear__c</fullName>
        <formula>if(Nissu_1stYear__c=0,0,
( ShikyuKingaku_1stYear__c / Nissu_1stYear__c )
* ( Nissu_1stYear__c - Jyogai_1stYear__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.1_1年目支給予定金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuYoteiKingaku_2ndYear__c</fullName>
        <formula>if(Nissu_2ndYear__c=0,0,
( ShikyuKingaku_2ndYear__c / Nissu_2ndYear__c ) 
* ( Nissu_2ndYear__c - Jyogai_2ndYear__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.2_2年目支給予定金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuYoteiKingaku_3rdYear__c</fullName>
        <formula>if(Nissu_3rdYear__c=0,0,
( ShikyuKingaku_3rdYear__c / Nissu_3rdYear__c ) 
* ( Nissu_3rdYear__c - Jyogai_3rdYear__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.3_3年目支給予定金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShikyuYoteiKingaku__c</fullName>
        <label>4.9_支給予定金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>ソート順</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SyoseiTanka_3rdYear__c</fullName>
        <formula>BosyuM_JyoseiTanka__r.SyoseiTanka_3rdYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0.3年目単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tanka_KijunBi__c</fullName>
        <formula>IF (
  Contact__r.KoyoKeiyaku_KaishiBi__c &gt;  ShikyuKikanKaishiBi__c 
, Contact__r.KoyoKeiyaku_KaishiBi__c 
,  ShikyuKikanKaishiBi__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0.単価計算基準日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TeishiNissu__c</fullName>
        <defaultValue>0</defaultValue>
        <description>対象範囲での停止期間に日数合計</description>
        <label>0.停止日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urudoshi_wo_Fukumu__c</fullName>
        <formula>AND( Tanka_KijunBi__c &lt;DATE(YEAR( ShikyuKikanSyuryoBi__c )-MOD(YEAR( ShikyuKikanSyuryoBi__c ),4),2,29),DATE(YEAR( ShikyuKikanSyuryoBi__c )-MOD(YEAR( ShikyuKikanSyuryoBi__c ),4),2,29)&lt;= ShikyuKikanSyuryoBi__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0.閏年を含む</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZanNissu_1stYear__c</fullName>
        <description>1年目日数として有効な残り日数</description>
        <label>1.7_1年目残日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZanNissu_2ndYear__c</fullName>
        <description>2年目日数として有効な残り日数</description>
        <label>2.7_2年目残日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZanNissu_3rdYear__c</fullName>
        <description>3年目日数として有効な残り日数</description>
        <label>3.7_3年目残日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZanShiharaiNissu_1stYear__c</fullName>
        <description>1年目日数で支給で計無かった支払い対象日数</description>
        <label>1.8_1年目残支払日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZanShiharaiNissu_2ndYear__c</fullName>
        <description>2年目日数で支給で計無かった支払い対象日数</description>
        <label>2.8_2年目残支払日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZanShiharaiNissu_3rdYear__c</fullName>
        <description>3年目日数で支給で計無かった支払い対象日数</description>
        <label>3.8_3年目残支払日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zenki_RodosyaTR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>0.前期労働者TR</label>
        <referenceTo>JFK_RodoSyaTR__c</referenceTo>
        <relationshipLabel>支給停止ワーク</relationshipLabel>
        <relationshipName>ZenkaiRodosyaTR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zenki_RuikeiNissu_1stYear__c</fullName>
        <formula>if(Zenki_RodosyaTR__c=null,0,
365 -  Zenki_RodosyaTR__r.ZanDays_1stYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1.0_1年目前期累計日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zenki_RuikeiNissu_2ndYear__c</fullName>
        <formula>if(Zenki_RodosyaTR__c=null,0,
365 - Zenki_RodosyaTR__r.ZanDays_2nsYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2.0_2年目前期累計日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zenki_RuikeiNissu_3rdYear__c</fullName>
        <formula>if(Zenki_RodosyaTR__c=null,0,
365 -  Zenki_RodosyaTR__r.ZanDays_3rdYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3.0_3年目前期累計日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zenki_ShikyuGaku_Ruikei_1stYear__c</fullName>
        <formula>if(Zenki_RodosyaTR__c=null,0,
BosyuM_JyoseiTanka__r.JyoseiTanka_1stYear__c -  Zenki_RodosyaTR__r.NokoriKingaku_1stYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1.1_1年目前期支給額累計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zenki_ShikyuGaku_Ruikei_2ndYear__c</fullName>
        <formula>if(Zenki_RodosyaTR__c=null,0,
BosyuM_JyoseiTanka__r.JyoseiTanka_2nsYear__c - Zenki_RodosyaTR__r.NokoriKingaku_2nsYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2.1_2年目前期支給額累計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zenki_ShikyuGaku_Ruikei_3rdYear__c</fullName>
        <formula>if(Zenki_RodosyaTR__c=null,0,
BosyuM_JyoseiTanka__r.SyoseiTanka_3rdYear__c - Zenki_RodosyaTR__r.NokoriKingaku_3rdYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3.1_3年目前期支給額累計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>支給停止ワーク</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>支給条件変更名</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Ranking</fullName>
        <active>true</active>
        <description>支給停止日設定において停止となる労働者の優先順位を判定する</description>
        <label>優先順位判定</label>
    </recordTypes>
    <recordTypes>
        <fullName>Setting</fullName>
        <active>true</active>
        <description>支給停止日設定において停止が発生する日付を保持する</description>
        <label>支給停止日設定</label>
    </recordTypes>
    <recordTypes>
        <fullName>Timing</fullName>
        <active>true</active>
        <description>支給停止日設定において停止が発生する可能性のある日付（離職日、雇用形態変更日など）を保持</description>
        <label>支給条件変更タイミング</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>